--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "file_type",
+  "name": "@nathanfaucett/file_type",
   "version": "0.0.1",
   "description": "file type for the browser and node.js",
   "repository": {
@@ -15,11 +15,11 @@
   "license": "MIT",
   "readmeFilename": "README.md",
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-jshint": "^0.11.3",
-    "grunt-jsbeautifier": "^0.2.10"
+    "grunt": "^1.0.1",
+    "grunt-contrib-jshint": "^1.0.0",
+    "grunt-jsbeautifier": "^0.2.13"
   },
   "dependencies": {
-    "has": "git://github.com/nathanfaucett/has.git"
+    "@nathanfaucett/has": "^0.0.1"
   }
 }
